--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "author": "Doha Faridi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "json-loader": "^0.5.7",
     "mongodb": "^3.0.9",
+    "node-sass-middleware": "^0.11.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
