--- a/package.json
+++ b/package.json
@@ -23,19 +23,17 @@
     "json-loader": "^0.5.7",
     "mongodb": "^3.0.9",
     "node-sass-middleware": "^0.11.0",
+    "prettier": "^1.13.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.8.2",
     "nodemon": "^1.17.5",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.3"
